--- a/python_indrajala/examples/importers/RawTests.ipynb
+++ b/python_indrajala/examples/importers/RawTests.ipynb
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 3,
    "id": "9b8d5e7f-9794-4e2e-b12b-0db2fbfdbbfe",
    "metadata": {},
    "outputs": [],
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 9,
    "id": "1397bd8e-64d2-4ea1-b036-e6240c29b69d",
    "metadata": {},
    "outputs": [],
@@ -45,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 10,
    "id": "2410cbec-a887-4dbb-9f16-2f556a3495bc",
    "metadata": {},
    "outputs": [],
@@ -55,27 +55,45 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 28,
    "id": "8b8a146f-53ce-4f32-a2a6-f36932118e51",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2022-07-23 10:00:41,246 INFO root processing: data_sources/MaunaLoaCO2MonthlyMean.toml\n",
+      "2022-07-23 10:00:41,254 INFO root processing: data_sources/EuropeanMeanTemperatureSinceRomanTime_EuroMed2k.toml\n",
+      "2022-07-23 10:00:41,263 INFO root processing: data_sources/MaunaLoaCO2WeeklyMeanHistorical.toml\n",
+      "2022-07-23 10:00:42,819 INFO root processing: data_sources/WikipediaGeologicTimeScales.toml\n",
+      "2022-07-23 10:00:42,924 INFO root processing: data_sources/DWDGermanJuneMeanTemperature.toml\n",
+      "2022-07-23 10:00:42,928 INFO root processing: data_sources/11000yearsunspotnumber.toml\n",
+      "2022-07-23 10:00:42,932 INFO root processing: data_sources/DWDGermanAugustMeanTemperature.toml\n",
+      "2022-07-23 10:00:42,936 INFO root processing: data_sources/DWDGermanJulyMeanTemperature.toml\n",
+      "2022-07-23 10:00:42,939 INFO root processing: data_sources/SunspotsMonthlyMean.toml\n",
+      "2022-07-23 10:00:42,952 INFO root processing: data_sources/GISP2IceCoreTemperatureAlley2004.toml\n",
+      "2022-07-23 10:00:42,961 INFO root processing: data_sources/EarlyCenozoicLiverwortBryocarbCO2Data.toml\n"
+     ]
+    }
+   ],
    "source": [
     "dfs=download_datasets.get_datasets()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 29,
    "id": "c248bb65-8f1e-4044-8d6e-d5cbde9bbab7",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "dict_keys(['euromed2k', 'germany_july_meantemp', 'germany_june_meantemp', 'germany_august_meantemp', 'sunspots11000yrs', 'gisp2icecoretemp', 'gisp2icecoreaccum', 'geologictimescale', 'sunspotsmonthlymean1749', 'CenozoicCO2', 'CenozoicCO2Filtered'])"
+       "dict_keys(['MaunaLoaMonthlyCO2', 'euromed2k', 'MaunaLoaWeeklyHistoricalCO2', 'geologictimescale', 'germany_june_meantemp', 'sunspots11000yrs', 'germany_august_meantemp', 'germany_july_meantemp', 'sunspotsmonthlymean1749', 'gisp2icecoretemp', 'gisp2icecoreaccum', 'CenozoicCO2', 'CenozoicCO2Filtered'])"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -86,7 +104,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 30,
    "id": "f1da5ae5-d097-44af-ac96-5e658c11f475",
    "metadata": {},
    "outputs": [
@@ -111,54 +129,192 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>age_ka</th>\n",
-       "      <th>Age_uncertainty_pos_ka</th>\n",
-       "      <th>Age_uncertainty_neg_ka</th>\n",
-       "      <th>CO2_ppm</th>\n",
-       "      <th>CO2_uncertainty_pos_ppm</th>\n",
-       "      <th>CO2_uncertainty_neg_ppm</th>\n",
+       "      <th>year</th>\n",
+       "      <th>month</th>\n",
+       "      <th>day</th>\n",
+       "      <th>decimal</th>\n",
+       "      <th>average</th>\n",
+       "      <th>ndays</th>\n",
+       "      <th>1 year ago</th>\n",
+       "      <th>10 years ago</th>\n",
+       "      <th>increase since 1800</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>52200</td>\n",
-       "      <td>3600.0</td>\n",
-       "      <td>3600.0</td>\n",
-       "      <td>1967</td>\n",
-       "      <td>1534</td>\n",
-       "      <td>875</td>\n",
+       "      <td>1974</td>\n",
+       "      <td>5</td>\n",
+       "      <td>19</td>\n",
+       "      <td>1974.3795</td>\n",
+       "      <td>333.37</td>\n",
+       "      <td>5</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>50.40</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>60400</td>\n",
-       "      <td>4600.0</td>\n",
-       "      <td>4600.0</td>\n",
-       "      <td>683</td>\n",
-       "      <td>199</td>\n",
-       "      <td>201</td>\n",
+       "      <td>1974</td>\n",
+       "      <td>5</td>\n",
+       "      <td>26</td>\n",
+       "      <td>1974.3986</td>\n",
+       "      <td>332.95</td>\n",
+       "      <td>6</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>50.06</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>1974</td>\n",
+       "      <td>6</td>\n",
+       "      <td>2</td>\n",
+       "      <td>1974.4178</td>\n",
+       "      <td>332.35</td>\n",
+       "      <td>5</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>49.60</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>1974</td>\n",
+       "      <td>6</td>\n",
+       "      <td>9</td>\n",
+       "      <td>1974.4370</td>\n",
+       "      <td>332.20</td>\n",
+       "      <td>7</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>49.65</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>1974</td>\n",
+       "      <td>6</td>\n",
+       "      <td>16</td>\n",
+       "      <td>1974.4562</td>\n",
+       "      <td>332.37</td>\n",
+       "      <td>7</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>50.06</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2507</th>\n",
+       "      <td>2022</td>\n",
+       "      <td>6</td>\n",
+       "      <td>5</td>\n",
+       "      <td>2022.4260</td>\n",
+       "      <td>421.30</td>\n",
+       "      <td>6</td>\n",
+       "      <td>419.61</td>\n",
+       "      <td>395.92</td>\n",
+       "      <td>138.40</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2508</th>\n",
+       "      <td>2022</td>\n",
+       "      <td>6</td>\n",
+       "      <td>12</td>\n",
+       "      <td>2022.4452</td>\n",
+       "      <td>421.03</td>\n",
+       "      <td>6</td>\n",
+       "      <td>419.00</td>\n",
+       "      <td>396.07</td>\n",
+       "      <td>138.50</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2509</th>\n",
+       "      <td>2022</td>\n",
+       "      <td>6</td>\n",
+       "      <td>19</td>\n",
+       "      <td>2022.4644</td>\n",
+       "      <td>420.87</td>\n",
+       "      <td>7</td>\n",
+       "      <td>418.62</td>\n",
+       "      <td>395.92</td>\n",
+       "      <td>138.77</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2510</th>\n",
+       "      <td>2022</td>\n",
+       "      <td>6</td>\n",
+       "      <td>26</td>\n",
+       "      <td>2022.4836</td>\n",
+       "      <td>420.31</td>\n",
+       "      <td>7</td>\n",
+       "      <td>418.14</td>\n",
+       "      <td>395.36</td>\n",
+       "      <td>138.69</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2511</th>\n",
+       "      <td>2022</td>\n",
+       "      <td>7</td>\n",
+       "      <td>3</td>\n",
+       "      <td>2022.5027</td>\n",
+       "      <td>419.73</td>\n",
+       "      <td>6</td>\n",
+       "      <td>417.49</td>\n",
+       "      <td>395.15</td>\n",
+       "      <td>138.61</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
+       "<p>2512 rows × 9 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "   age_ka  Age_uncertainty_pos_ka  Age_uncertainty_neg_ka  CO2_ppm  \\\n",
-       "0   52200                  3600.0                  3600.0     1967   \n",
-       "1   60400                  4600.0                  4600.0      683   \n",
+       "      year  month  day    decimal  average  ndays  1 year ago  10 years ago  \\\n",
+       "0     1974      5   19  1974.3795   333.37      5         NaN           NaN   \n",
+       "1     1974      5   26  1974.3986   332.95      6         NaN           NaN   \n",
+       "2     1974      6    2  1974.4178   332.35      5         NaN           NaN   \n",
+       "3     1974      6    9  1974.4370   332.20      7         NaN           NaN   \n",
+       "4     1974      6   16  1974.4562   332.37      7         NaN           NaN   \n",
+       "...    ...    ...  ...        ...      ...    ...         ...           ...   \n",
+       "2507  2022      6    5  2022.4260   421.30      6      419.61        395.92   \n",
+       "2508  2022      6   12  2022.4452   421.03      6      419.00        396.07   \n",
+       "2509  2022      6   19  2022.4644   420.87      7      418.62        395.92   \n",
+       "2510  2022      6   26  2022.4836   420.31      7      418.14        395.36   \n",
+       "2511  2022      7    3  2022.5027   419.73      6      417.49        395.15   \n",
        "\n",
-       "   CO2_uncertainty_pos_ppm  CO2_uncertainty_neg_ppm  \n",
-       "0                     1534                      875  \n",
-       "1                      199                      201  "
+       "      increase since 1800  \n",
+       "0                   50.40  \n",
+       "1                   50.06  \n",
+       "2                   49.60  \n",
+       "3                   49.65  \n",
+       "4                   50.06  \n",
+       "...                   ...  \n",
+       "2507               138.40  \n",
+       "2508               138.50  \n",
+       "2509               138.77  \n",
+       "2510               138.69  \n",
+       "2511               138.61  \n",
+       "\n",
+       "[2512 rows x 9 columns]"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "dfs['CenozoicCO2Filtered']"
+    "dfs['MaunaLoaWeeklyHistoricalCO2']"
    ]
   },
   {
