--- a/python_indrajala/examples/s_time_plot.ipynb
+++ b/python_indrajala/examples/s_time_plot.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,148 +11,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "image/svg+xml": [
-       "<?xml version=\"1.0\" encoding=\"UTF-8\"?>\n",
-       "<svg xmlns=\"http://www.w3.org/2000/svg\" xmlns:xlink=\"http://www.w3.org/1999/xlink\"\n",
-       "     width=\"400\" height=\"200\" viewBox=\"-100.0 -50.0 200 100\">\n",
-       "<defs>\n",
-       "<path d=\"M-10,-20 C30,10,30,-50,70,-20\" stroke-width=\"2\" stroke=\"lime\" fill=\"black\" fill-opacity=\"0.2\" id=\"fvpo9feU0\" />\n",
-       "<marker markerWidth=\"4.0\" markerHeight=\"4.04\" viewBox=\"-0.1 -0.51 1.0 1.01\" orient=\"auto\" id=\"fvpo9feU1\">\n",
-       "<path d=\"M-0.1,0.5 L-0.1,-0.5 L0.9,0 Z\" fill=\"red\" />\n",
-       "</marker>\n",
-       "</defs>\n",
-       "<path d=\"M-80,45 L70,49 L95,-49 L-90,-40\" fill=\"#eeee00\" stroke=\"black\" />\n",
-       "<rect x=\"-80\" y=\"-50\" width=\"40\" height=\"50\" fill=\"#1248ff\">\n",
-       "<title>Our first rectangle</title>\n",
-       "</rect>\n",
-       "<circle cx=\"-40\" cy=\"10\" r=\"30\" fill=\"red\" stroke-width=\"2\" stroke=\"black\" />\n",
-       "<use xlink:href=\"#fvpo9feU0\" />\n",
-       "<text x=\"-10\" y=\"-35\" font-size=\"8\" fill=\"blue\">Basic text</text>\n",
-       "<text font-size=\"8\" text-anchor=\"start\"><textPath xlink:href=\"#fvpo9feU0\" startOffset=\"0\">\n",
-       "<tspan dy=\"0em\">Path text</tspan>\n",
-       "</textPath></text>\n",
-       "<g>\n",
-       "<text font-size=\"8\" text-anchor=\"end\"><textPath xlink:href=\"#fvpo9feU0\" startOffset=\"100%\">\n",
-       "<tspan dy=\"0.0em\" dx=\"-1\">Multi-line</tspan>\n",
-       "</textPath></text>\n",
-       "<text font-size=\"8\" text-anchor=\"end\"><textPath xlink:href=\"#fvpo9feU0\" startOffset=\"100%\">\n",
-       "<tspan dy=\"1.0em\" dx=\"-1\">text</tspan>\n",
-       "</textPath></text>\n",
-       "</g>\n",
-       "<circle cx=\"60\" cy=\"20\" r=\"20\" stroke-dasharray=\"73.30382858376184 52.35987755982988\" stroke-dashoffset=\"-31.41592653589793\" stroke=\"red\" stroke-width=\"5\" fill=\"red\" fill-opacity=\"0.2\" />\n",
-       "<path d=\"M60.0,40.0 A20,20,0,1,1,70.0,2.679491924311229\" stroke=\"green\" stroke-width=\"3\" fill=\"none\" />\n",
-       "<path d=\"M70.0,2.679491924311229 A20,20,0,1,0,60.0,40.0\" stroke=\"blue\" stroke-width=\"1\" fill=\"black\" fill-opacity=\"0.3\" />\n",
-       "<path d=\"M20,40 L20,27 L0,20\" stroke=\"red\" stroke-width=\"2\" fill=\"none\" marker-end=\"url(#fvpo9feU1)\" />\n",
-       "<path d=\"M30,20 L0,10\" stroke=\"red\" stroke-width=\"2\" fill=\"none\" marker-end=\"url(#fvpo9feU1)\" />\n",
-       "</svg>"
-      ],
-      "text/plain": [
-       "<drawsvg.drawing.Drawing at 0x7fa279f54110>"
-      ]
-     },
-     "execution_count": 2,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "\n",
-    "d = draw.Drawing(200, 100, origin='center')\n",
-    "\n",
-    "# Draw an irregular polygon\n",
-    "d.append(draw.Lines(-80, 45,\n",
-    "                     70, 49,\n",
-    "                     95, -49,\n",
-    "                    -90, -40,\n",
-    "                    close=False,\n",
-    "            fill='#eeee00',\n",
-    "            stroke='black'))\n",
-    "\n",
-    "# Draw a rectangle\n",
-    "r = draw.Rectangle(-80, -50, 40, 50, fill='#1248ff')\n",
-    "r.append_title(\"Our first rectangle\")  # Add a tooltip\n",
-    "d.append(r)\n",
-    "\n",
-    "# Draw a circle\n",
-    "d.append(draw.Circle(-40, 10, 30,\n",
-    "        fill='red', stroke_width=2, stroke='black'))\n",
-    "\n",
-    "# Draw an arbitrary path (a triangle in this case)\n",
-    "p = draw.Path(stroke_width=2, stroke='lime', fill='black', fill_opacity=0.2)\n",
-    "p.M(-10, -20)  # Start path at point (-10, -20)\n",
-    "p.C(30, 10, 30, -50, 70, -20)  # Draw a curve to (70, -20)\n",
-    "d.append(p)\n",
-    "\n",
-    "# Draw text\n",
-    "d.append(draw.Text('Basic text', 8, -10, -35, fill='blue'))  # 8pt text at (-10, -35)\n",
-    "d.append(draw.Text('Path text', 8, path=p, text_anchor='start', line_height=1))\n",
-    "d.append(draw.Text(['Multi-line', 'text'], 8, path=p, text_anchor='end', center=True))\n",
-    "\n",
-    "# Draw multiple circular arcs\n",
-    "d.append(draw.ArcLine(60, 20, 20, 60, 270,\n",
-    "        stroke='red', stroke_width=5, fill='red', fill_opacity=0.2))\n",
-    "d.append(draw.Arc(60, 20, 20, 90, -60, cw=True,\n",
-    "        stroke='green', stroke_width=3, fill='none'))\n",
-    "d.append(draw.Arc(60, 20, 20, -60, 90, cw=False,\n",
-    "        stroke='blue', stroke_width=1, fill='black', fill_opacity=0.3))\n",
-    "\n",
-    "# Draw arrows\n",
-    "arrow = draw.Marker(-0.1, -0.51, 0.9, 0.5, scale=4, orient='auto')\n",
-    "arrow.append(draw.Lines(-0.1, 0.5, -0.1, -0.5, 0.9, 0, fill='red', close=True))\n",
-    "p = draw.Path(stroke='red', stroke_width=2, fill='none',\n",
-    "        marker_end=arrow)  # Add an arrow to the end of a path\n",
-    "p.M(20, 40).L(20, 27).L(0, 20)  # Chain multiple path commands\n",
-    "d.append(p)\n",
-    "d.append(draw.Line(30, 20, 0, 10,\n",
-    "        stroke='red', stroke_width=2, fill='none',\n",
-    "        marker_end=arrow))  # Add an arrow to the end of a line\n",
-    "\n",
-    "d.set_pixel_scale(2)  # Set number of pixels per geometry unit\n",
-    "#d.set_render_size(400, 200)  # Alternative to set_pixel_scale\n",
-    "d.save_svg('example.svg')\n",
-    "d.save_png('example.png')\n",
-    "\n",
-    "# Display in Jupyter notebook\n",
-    "#d.rasterize()  # Display as PNG\n",
-    "d  # Display as SVG"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [],
    "source": [
     "class SPlotter:\n",
-    "    def __init__(self, size, canvas=None, rect=None, pixel_scale=1):\n",
+    "    def __init__(self, size, border=None, rect=None, pixel_scale=1):\n",
     "        \"\"\"\n",
     "        size: (width, height) of the plot in device coordinates\n",
-    "        canvas: (x_min, y_min, x_max, y_max) of the plot in device coordinates, must be within size\n",
-    "        rect: (x_min, y_min, x_max, y_max) of the plot in data coordinates, gets mapped to canvas\n",
+    "        border: (left, top, right, bottom) of the plot in device coordinates\n",
+    "        rect: (x_min, y_min, x_max, y_max) of the plot in data coordinates, gets mapped to canvas' device coordinates\n",
+    "        pixel_scale: scale of the plot in pixels per device coordinate\n",
     "        \"\"\"\n",
-    "        if canvas is None:\n",
-    "            canvas = (0, 0, size[0], size[1])\n",
-    "        else:\n",
-    "            if canvas[0] < 0:\n",
-    "                canvas[0] = 0\n",
-    "            if canvas[1] < 0:\n",
-    "                canvas[1] = 0\n",
-    "            if canvas[2] > size[0]:\n",
-    "                canvas[2] = size[0]\n",
-    "            if canvas[3] > size[1]:\n",
-    "                canvas[3] = size[1]\n",
+    "        self.axis_x1_border = 10\n",
+    "        self.axis_x2_border = 10\n",
+    "        self.axis_y_border = 20\n",
     "        self.size = size\n",
-    "        self.canvas = canvas\n",
+    "\n",
+    "        if border is None:\n",
+    "            border = (0, 0, 0, 0)\n",
+    "        self.canvas = (border[0]+self.axis_x1_border, border[1], size[0] - border[2] - self.axis_x2_border, size[1] - border[3])\n",
+    "\n",
     "        self.rect = rect\n",
+    "\n",
+    "        self.arrow_height = 8\n",
+    "        self.arrow_width = 3\n",
+    "\n",
     "\n",
     "        self.d = draw.Drawing(size[0], size[1], origin=(0,0))\n",
     "        self.pixel_scale = pixel_scale\n",
     "        self.d.set_pixel_scale(pixel_scale)\n",
+    "\n",
+    "        self.d.append(draw.Rectangle(0, 0, size[0], size[1], fill='yellow'))\n",
+    "        self.d.append(draw.Rectangle(self.canvas[0], self.canvas[1], self.canvas[2], self.canvas[3], fill='white'))\n",
     "\n",
     "    def scale_x(self, x):\n",
     "        return (x - self.rect[0]) / (self.rect[2] - self.rect[0]) * (self.canvas[2] - self.canvas[0]) + self.canvas[0]\n",
@@ -183,16 +74,14 @@
     "    def add_axis(self, arrows=True):\n",
     "        self.add_line(self.rect[0], 0, self.rect[2], 0)\n",
     "        self.add_line(0, self.rect[1], 0, self.rect[3])\n",
-    "        arrow_height = 8\n",
-    "        arrow_width_h = 3\n",
     "        if arrows is True:\n",
     "            x_arrow_tip = (self.rect[2], 0)\n",
     "            y_arrow_tip = (0, self.rect[3])\n",
     "            x_arrow_tipc = self.scale_point(*x_arrow_tip)\n",
     "            y_arrow_tipc = self.scale_point(*y_arrow_tip)\n",
-    "            for d in range(-arrow_width_h, arrow_width_h+1):\n",
-    "                self.add_linec(*x_arrow_tipc, x_arrow_tipc[0] - arrow_height, x_arrow_tipc[1] - d)\n",
-    "                self.add_linec(*y_arrow_tipc, y_arrow_tipc[0] - d, y_arrow_tipc[1] + arrow_height)\n",
+    "            for d in range(-self.arrow_width, self.arrow_width+1):\n",
+    "                self.add_linec(*x_arrow_tipc, x_arrow_tipc[0] - self.arrow_height, x_arrow_tipc[1] - d)\n",
+    "                self.add_linec(*y_arrow_tipc, y_arrow_tipc[0] - d, y_arrow_tipc[1] + self.arrow_height)\n",
     "            # self.add_linec(*x_arrow_tipc, x_arrow_tipc[0] - 10, x_arrow_tipc[1] + 5)\n",
     "            # self.add_linec(*y_arrow_tipc, y_arrow_tipc[0] + 5, y_arrow_tipc[1] + 10)\n",
     "            \n"
@@ -200,16 +89,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [],
    "source": [
-    "pl = SPlotter((800, 300), (10, 10, 790, 290),  (-10, -10, 10, 10), 1)"
+    "pl = SPlotter(size=(800, 300), border=(5,5,5,5), rect=(-10, -10, 10, 10), pixel_scale=1)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [
     {
@@ -220,29 +109,31 @@
        "     width=\"800\" height=\"300\" viewBox=\"0 0 800 300\">\n",
        "<defs>\n",
        "</defs>\n",
-       "<path d=\"M10.0,150.0 L790.0,150.0\" stroke=\"gray\" />\n",
-       "<path d=\"M400.0,290.0 L400.0,10.0\" stroke=\"gray\" />\n",
-       "<path d=\"M790.0,150.0 L782.0,153.0\" stroke=\"gray\" />\n",
-       "<path d=\"M400.0,10.0 L403.0,18.0\" stroke=\"gray\" />\n",
-       "<path d=\"M790.0,150.0 L782.0,152.0\" stroke=\"gray\" />\n",
-       "<path d=\"M400.0,10.0 L402.0,18.0\" stroke=\"gray\" />\n",
-       "<path d=\"M790.0,150.0 L782.0,151.0\" stroke=\"gray\" />\n",
-       "<path d=\"M400.0,10.0 L401.0,18.0\" stroke=\"gray\" />\n",
-       "<path d=\"M790.0,150.0 L782.0,150.0\" stroke=\"gray\" />\n",
-       "<path d=\"M400.0,10.0 L400.0,18.0\" stroke=\"gray\" />\n",
-       "<path d=\"M790.0,150.0 L782.0,149.0\" stroke=\"gray\" />\n",
-       "<path d=\"M400.0,10.0 L399.0,18.0\" stroke=\"gray\" />\n",
-       "<path d=\"M790.0,150.0 L782.0,148.0\" stroke=\"gray\" />\n",
-       "<path d=\"M400.0,10.0 L398.0,18.0\" stroke=\"gray\" />\n",
-       "<path d=\"M790.0,150.0 L782.0,147.0\" stroke=\"gray\" />\n",
-       "<path d=\"M400.0,10.0 L397.0,18.0\" stroke=\"gray\" />\n",
+       "<rect x=\"0\" y=\"0\" width=\"800\" height=\"300\" fill=\"yellow\" />\n",
+       "<rect x=\"15\" y=\"5\" width=\"785\" height=\"295\" fill=\"white\" />\n",
+       "<path d=\"M15.0,150.0 L785.0,150.0\" stroke=\"gray\" />\n",
+       "<path d=\"M400.0,295.0 L400.0,5.0\" stroke=\"gray\" />\n",
+       "<path d=\"M785.0,150.0 L777.0,153.0\" stroke=\"gray\" />\n",
+       "<path d=\"M400.0,5.0 L403.0,13.0\" stroke=\"gray\" />\n",
+       "<path d=\"M785.0,150.0 L777.0,152.0\" stroke=\"gray\" />\n",
+       "<path d=\"M400.0,5.0 L402.0,13.0\" stroke=\"gray\" />\n",
+       "<path d=\"M785.0,150.0 L777.0,151.0\" stroke=\"gray\" />\n",
+       "<path d=\"M400.0,5.0 L401.0,13.0\" stroke=\"gray\" />\n",
+       "<path d=\"M785.0,150.0 L777.0,150.0\" stroke=\"gray\" />\n",
+       "<path d=\"M400.0,5.0 L400.0,13.0\" stroke=\"gray\" />\n",
+       "<path d=\"M785.0,150.0 L777.0,149.0\" stroke=\"gray\" />\n",
+       "<path d=\"M400.0,5.0 L399.0,13.0\" stroke=\"gray\" />\n",
+       "<path d=\"M785.0,150.0 L777.0,148.0\" stroke=\"gray\" />\n",
+       "<path d=\"M400.0,5.0 L398.0,13.0\" stroke=\"gray\" />\n",
+       "<path d=\"M785.0,150.0 L777.0,147.0\" stroke=\"gray\" />\n",
+       "<path d=\"M400.0,5.0 L397.0,13.0\" stroke=\"gray\" />\n",
        "</svg>"
       ],
       "text/plain": [
-       "<drawsvg.drawing.Drawing at 0x7fa2787fa790>"
+       "<drawsvg.drawing.Drawing at 0x7f61e723be90>"
       ]
      },
-     "execution_count": 47,
+     "execution_count": 52,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -251,6 +142,13 @@
     "pl.add_axis(arrows=True)\n",
     "pl.d"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
